Refactor to use `LangUtil.asUnmodifiableList` for array-to-list conversions across multiple classes, replacing `Arrays.asList`. Enhance locale index search in `FxLauncher` using `LangUtil.indexOf`.